--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#2A75B1</color>
     <color name="colorPrimaryDark">#4E4E4E</color>
     <color name="colorAccent">#03C8DA</color>
+    <color name="black_overlay">#66000000</color>
 </resources>
