--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,7 @@
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:background="#0099cc"
-tools:context=".LocationSelectionFragment">
+tools:context=".MainActivity">
 
 <!-- The primary full-screen view. This can be replaced with whatever view
      is needed to present your content, e.g. VideoView, SurfaceView,
@@ -16,7 +15,6 @@ tools:context=".LocationSelectionFragment">
     android:gravity="center"
     android:keepScreenOn="true"
     android:text="@string/app_welcome"
-    android:textColor="#33b5e5"
     android:textSize="50sp"
     android:textStyle="bold" />
 
