Implement fragment-based architecture

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,43 +4,9 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".MainActivity">
-
-<!-- The primary full-screen view. This can be replaced with whatever view
-     is needed to present your content, e.g. VideoView, SurfaceView,
-     TextureView, etc. -->
-<TextView
-    android:id="@+id/fullscreen_content"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:keepScreenOn="true"
-    android:text="@string/app_welcome"
-    android:textSize="50sp"
-    android:textStyle="bold" />
-
-<!-- This FrameLayout insets its children based on system windows using
-     android:fitsSystemWindows. -->
-<FrameLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
-    <LinearLayout
-        android:id="@+id/fullscreen_content_controls"
-        style="?android:attr/buttonBarStyle"
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/frag_placeholder"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal"
-        android:background="@color/black_overlay"
-        android:orientation="horizontal"
-        tools:ignore="UselessParent">
-        <Button
-            android:id="@+id/location_button"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/location_button"
-            android:onClick="onLocationNavBtnClick"/>
-    </LinearLayout>
-</FrameLayout>
+        android:layout_height="match_parent">
+    </androidx.viewpager.widget.ViewPager>
 </FrameLayout>
