--- a/app/src/main/res/layout/fragment_location_find_options.xml
+++ b/app/src/main/res/layout/fragment_location_find_options.xml
@@ -1,41 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".LocationFindOptionsFragment">
-
-<LinearLayout
-    android:id="@+id/fullscreen_content_controls"
-    style="?android:attr/buttonBarStyle"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="bottom|center_horizontal"
-    android:background="@color/black_overlay"
-    android:orientation="horizontal"
-    tools:ignore="UselessParent">
+    android:layout_height="match_parent"
+    tools:context=".LocationFindOptionsFragment">
+
+    <LinearLayout
+        android:id="@+id/fullscreen_content_controls"
+        style="?android:attr/buttonBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
 
         <Button
             android:id="@+id/location_btn"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="30dp"
             android:layout_weight="1"
+            android:background="@color/black_overlay"
             android:text="@string/location_btn" />
 
         <Button
             android:id="@+id/gps_button"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="60dp"
             android:layout_weight="1"
+            android:background="@color/black_overlay"
             android:text="@string/gps_btn" />
 
 
-</LinearLayout>
-    </FrameLayout>
+    </LinearLayout>
+</FrameLayout>
 
-<!--    <?xml version="1.0" encoding="utf-8"?>-->
+<!--<?xml version="1.0" encoding="utf-8"?>-->
 <!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
 <!--xmlns:tools="http://schemas.android.com/tools"-->
 <!--android:layout_width="match_parent"-->
@@ -56,11 +61,28 @@ tools:context=".LocationFindOptionsFragment">
 <!--    <?xml version="1.0" encoding="utf-8"?>-->
 <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
 <!--xmlns:tools="http://schemas.android.com/tools"-->
-<!--android:layout_width="match_parent"-->
 <!--tools:context=".LocationFindOptionsFragment"-->
 <!--android:id="@+id/fullscreen_content_controls"-->
 <!--style="?android:attr/buttonBarStyle"-->
 <!--android:layout_height="wrap_content"-->
+    <!--android:layout_width="match_parent"-->
 <!--android:layout_gravity="bottom|center_horizontal"-->
 <!--android:background="@color/black_overlay"-->
 <!--android:orientation="horizontal">-->
+
+
+<!--<Button-->
+<!--android:id="@+id/location_btn"-->
+<!--style="?android:attr/buttonBarButtonStyle"-->
+<!--android:layout_width="0dp"-->
+<!--android:layout_height="wrap_content"-->
+<!--android:layout_weight="1"-->
+<!--android:text="@string/location_btn" />-->
+
+<!--<Button-->
+<!--android:id="@+id/gps_button"-->
+<!--style="?android:attr/buttonBarButtonStyle"-->
+<!--android:layout_width="0dp"-->
+<!--android:layout_height="wrap_content"-->
+<!--android:layout_weight="1"-->
+<!--android:text="@string/gps_btn" />-->
