--- a/app/src/main/res/layout/fragment_location_selection.xml
+++ b/app/src/main/res/layout/fragment_location_selection.xml
@@ -69,10 +69,10 @@
         android:id="@+id/submit_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
         android:text="@string/submit_btn"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/county_spinner"/>
+        app:layout_constraintTop_toBottomOf="@+id/county_spinner" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier"
@@ -81,6 +81,20 @@
         app:barrierDirection="end"
         app:constraint_referenced_ids="state_spinner_text,county_spinner_text"
         tools:layout_editor_absoluteX="800dp" />
+
+    <TextView
+        android:id="@+id/locationTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/submit_btn" />
+
+    <TextView
+        android:id="@+id/snapshotTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/locationTextView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
