--- a/app/src/main/res/layout/fragment_location_selection.xml
+++ b/app/src/main/res/layout/fragment_location_selection.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="10dp"
     tools:context=".LocationManualSelectionFragment">
 
     <TextView
@@ -14,45 +14,22 @@
 
         android:layout_marginTop="100dp"
         android:text="@string/location_entry_text"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/state_spinner"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <TextView
-        android:id="@+id/state_spinner_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/state"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/location_entry_tv" />
 
     <Spinner
         android:id="@+id/state_spinner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/state_spinner_text"
+        app:layout_constraintStart_toStartOf="@+id/location_entry_tv"
         app:layout_constraintTop_toBottomOf="@+id/location_entry_tv"
         app:layout_constraintVertical_chainStyle="packed" />
-
-    <TextView
-        android:id="@+id/county_spinner_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="48dp"
-        android:text="@string/county"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/state_spinner_text" />
 
     <Spinner
         android:id="@+id/county_spinner"
@@ -61,8 +38,7 @@
         android:layout_marginTop="20dp"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="@+id/state_spinner"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/state_spinner"
+        app:layout_constraintStart_toStartOf="@+id/location_entry_tv"
         app:layout_constraintTop_toBottomOf="@+id/state_spinner" />
 
     <Button
@@ -79,7 +55,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="end"
-        app:constraint_referenced_ids="state_spinner_text,county_spinner_text"
         tools:layout_editor_absoluteX="800dp" />
 
     <TextView
