--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,10 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/lineGraph"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
