conditionally renders fragments

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,4 +4,11 @@
     android:id="@+id/fragContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"></FrameLayout>
+    tools:context=".MainActivity">
+
+    <ImageView
+        android:src="@drawable/swiiirl"
+        android:scaleType="centerCrop"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</FrameLayout>
