--- a/app/src/main/res/layout/fragment_location_selection.xml
+++ b/app/src/main/res/layout/fragment_location_selection.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
+    android:background="@color/colorPrimaryLight"
+    android:padding="10dp"
     tools:context=".LocationManualSelectionFragment">
 
     <TextView
@@ -25,7 +27,7 @@
         android:id="@+id/location_entry_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:textSize="20sp"
         android:layout_marginTop="24dp"
         android:text="@string/location_entry_text"
         android:textStyle="bold"
@@ -36,6 +38,7 @@
 
     <Spinner
         android:id="@+id/state_spinner"
+        android:textSize="22sp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -47,6 +50,7 @@
 
     <Spinner
         android:id="@+id/county_spinner"
+        android:textSize="22sp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -62,6 +66,7 @@
         android:layout_marginTop="44dp"
         android:text="@string/submit_btn"
         app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center"
         app:layout_constraintTop_toBottomOf="@+id/county_spinner" />
 
     <androidx.constraintlayout.widget.Barrier
