--- a/app/src/main/res/layout/fragment_risk_detail.xml
+++ b/app/src/main/res/layout/fragment_risk_detail.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/risk_detail_frag"
+    android:background="@color/colorPrimaryLight"
+    android:layout_margin="10dp"
     tools:context=".RiskDetailPageFragment">
 
     <LinearLayout
@@ -228,6 +230,16 @@
                 app:layout_constraintEnd_toEndOf="@+id/labelRiskAmount"
                 app:layout_constraintStart_toStartOf="@+id/labelRiskAmount"
                 app:layout_constraintTop_toTopOf="@+id/labelGroup200" />
+
+            <Button
+                android:id="@+id/select_location_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="44dp"
+                android:text="@string/select_location"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:gravity="center"
+                app:layout_constraintTop_toBottomOf="@+id/group200" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
